# sqrteq

./: .gitignore  .stylish-haskell.yaml  Main  Main.hi  Main.hs  README.md  package.yaml  sqrteq.cabal
app/: Main.hs
src/Data/: QuadraticEquation.hs
src/System/IO/: Extra.hs
test/Test/Data/: QuadraticEquationSpec.hs
