name:                sqrteq
version:             0.1.0.0
synopsis:            Program for solving quadratic equations
license:             GPL-3
license-file:        LICENSE
author:              Artyom Kosenko
maintainer:          hotkosc@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable sqrteq
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 5
  default-language:    Haskell2010